# ggtd

./: LICENSE  README.md  ggtd.cabal  stack.yaml
app/: main.hs
src/: Main.hs
src/GGTD/: Base.hs  CLI.hs  DB.hs  Filter.hs  Relation.hs  Sort.hs  TUI.hs  Tickler.hs
src/GGTD/CLI/: Base.hs  Edge.hs  Ls.hs  Node.hs  Option.hs  Render.hs  Set.hs  Tickler.hs  Todo.hs
src/GGTD/DB/: Query.hs  Update.hs
src/GGTD/TUI/: Base.hs  LineInput.hs  TaskList.hs  TreeNav.hs
