name:                ggtd
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/SimSaladin/ggtd#readme
license:             BSD3
license-file:        LICENSE
author:              Samuli Thomasson
maintainer:          samuli.thomasson@paivola.fi
copyright:           Samuli Thomasson
category:            Application
build-type:          Simple
cabal-version:       >=1.10

executable ggtd
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , time >= 1.0 && < 2
                     , containers >= 0.5 && < 1
                     , transformers >= 0.4 && < 0.5
                     , fgl  >= 5.0 && < 6
                     , lens >= 4.0 && < 5.0
                     , directory >= 1.0 && < 2
                     , console-program >= 0.4 && < 1.0
                     , ansi-wl-pprint >= 0.6 && < 1.0
