name:                ggtd
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/SimSaladin/ggtd#readme
license:             BSD3
license-file:        LICENSE
author:              Samuli Thomasson
maintainer:          samuli.thomasson@paivola.fi
copyright:           Samuli Thomasson
category:            Application
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GGTD.Base
                     , GGTD.CLI
                     , GGTD.CLI.Base
                     , GGTD.CLI.Edge
                     , GGTD.CLI.Ls
                     , GGTD.CLI.Node
                     , GGTD.CLI.Option
                     , GGTD.CLI.Render
                     , GGTD.CLI.Set
                     , GGTD.CLI.Tickler
                     , GGTD.CLI.Todo
                     , GGTD.DB
                     , GGTD.DB.Query
                     , GGTD.DB.Update
                     , GGTD.TUI
                     , GGTD.TUI.Base
                     , GGTD.TUI.TaskList
                     , GGTD.Filter
                     , GGTD.Relation
                     , GGTD.Sort
                     , GGTD.Tickler
  default-language:    Haskell2010
  build-depends:       base            >= 4.7     && < 5
                     , time            >= 1.0     && < 2
                     , containers      >= 0.5     && < 1
                     , transformers    >= 0.4     && < 0.5
                     , stm             >= 2.4     && < 3
                     , fgl             >= 5.0     && < 6
                     , lens            >= 4.0     && < 5.0
                     , directory       >= 1.2.3   && < 2
                     , filepath        >= 1.0     && < 2
                     , console-program >= 0.4     && < 1
                     , ansi-wl-pprint  >= 0.6     && < 1
                     , regex-base      >= 0.90    && < 1
                     , regex-compat    >= 0.90    && < 1
                     , friendly-time   >= 0.4     && < 1
                     , yaml            >= 0.8.4   && < 1
                     , vty             >= 5.5.0   && < 6
                     , brick           >= 0.4     && < 0.5
                     , data-default
  ghc-options:         -Wall -Werror -O
  default-extensions:  OverloadedStrings
                       RecordWildCards
                       TemplateHaskell
                       MultiWayIf
                       LambdaCase

executable ggtd
  hs-source-dirs:      app
  main-is:             main.hs
  default-language:    Haskell2010
  build-depends:       ggtd
                     , base >= 4.7 && < 5
                     , transformers
                     , console-program
  ghc-options:         -Wall -Werror -threaded -O
